--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>forecasty</title>
+    <title>forecasty.</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
     <link type="image/png" sizes="16x16" rel="icon" href="./images/icons8-partly-cloudy-day-96.png">
@@ -17,8 +17,61 @@
         </div>
     </div>
     <div class="secondSection">
-            <input type="text" name="Enter City Name" placeholder="Enter City Name" id="">
+            <input type="text" name="Enter City Name" placeholder="Enter a city" id="">
             <button>Search</button>
+    </div>
+    <div class="thirdSection">
+        <div class="today">
+            <div class="subToday">
+                <div class="info">
+                    <div class="cityName">
+                        <h2 id="cityName">Ikorodu</h3>
+                    </div>
+                    <div class="tempInfo">
+                        <h1>24°c</h1>
+                        <p>Mostly Cloudy</p>
+                    </div>
+                </div>
+                <div class="weatherIcon">
+                    <img src="./images/amcharts_weather_icons_1.0.0/animated/cloudy-day-2.svg" alt="">
+                </div>
+            </div>
+            <div class="rowInfo">
+                <div class="humidity">
+                    <h3>80</h3>
+                    <p>Humidity</p>
+                </div><hr>
+                <div class="windSpeed">
+                    <h3>90</h3>
+                    <p>Windspeed</p>
+                </div><hr>
+                <div class="temp">
+                    <h3>40</h3>
+                    <p>Pressure</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="fourthSection">
+        <h2>5 Days Forcast</h2>
+    </div>
+    <div class="fifthSection">
+        <div class="otherDayOne">
+
+        </div>
+        <div class="otherDayTwo">
+            
+        </div>
+        <div class="otherDayThree">
+
+        </div>
+        <div class="otherDayFour">
+
+        </div>
+        <div class="otherDayFive">
+
+        </div>
+
     </div>
 </body>
 </html>
