added some javascript

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         </div>
     </div>
     <div class="secondSection">
-            <input type="text" name="Enter City Name" placeholder="Enter a city" id="">
-            <button>Search</button>
+            <input id="cName" type="text" placeholder="Enter a city">
+            <button id="searchBtn" type="button">Search</button>
     </div>
     <div class="thirdSection">
         <div class="today">
             <div class="subToday">
                 <div class="info">
                     <div class="cityName">
-                        <h2 id="cityName">Ikorodu</h3>
+                        <h2 id="cityName">ikorodu</h3>
                     </div>
                     <div class="tempInfo">
-                        <h1>24°c</h1>
-                        <p>Mostly Cloudy</p>
+                        <h1 id="temp">44</h1><span>°c</span>
+                        <p id="condition">Mostly Cloudy</p>
                     </div>
                 </div>
                 <div class="weatherIcon">
@@ -38,15 +38,15 @@
             </div>
             <div class="rowInfo">
                 <div class="humidity">
-                    <h3>80</h3>
+                    <h3 id="humidity">20</h3>
                     <p>Humidity</p>
                 </div><hr>
                 <div class="windSpeed">
-                    <h3>90</h3>
+                    <h3 id="windSpeed">42</h3>
                     <p>Windspeed</p>
                 </div><hr>
-                <div class="temp">
-                    <h3>40</h3>
+                <div class="pressure">
+                    <h3 id="pressure">10</h3>
                     <p>Pressure</p>
                 </div>
             </div>
