--- a/index.html
+++ b/index.html
@@ -25,35 +25,35 @@
             <div class="subToday">
                 <div class="info">
                     <div class="cityName">
-                        <h2 id="cityName">ikorodu</h3>
+                        <h2 id="cityName">--</h3>
                     </div>
                     <div class="tempInfo">
-                        <h1 id="temp">44</h1><span>°c</span>
+                        <h1 id="temp"><span id="cel">°c</span></h1>
                         <p id="condition">Mostly Cloudy</p>
                     </div>
                 </div>
                 <div class="weatherIcon">
-                    <img src="./images/amcharts_weather_icons_1.0.0/animated/cloudy-day-2.svg" alt="">
+                   
                 </div>
             </div>
             <div class="rowInfo">
                 <div class="humidity">
-                    <h3 id="humidity">20</h3>
-                    <p>Humidity</p>
+                    <h3 id="humidity">--</h3>
+                    <p>Humidity (%)</p>
                 </div><hr>
                 <div class="windSpeed">
-                    <h3 id="windSpeed">42</h3>
-                    <p>Windspeed</p>
+                    <h3 id="windSpeed">--</h3>
+                    <p>Windspeed (m/s)</p>
                 </div><hr>
                 <div class="pressure">
-                    <h3 id="pressure">10</h3>
-                    <p>Pressure</p>
+                    <h3 id="pressure">--</h3>
+                    <p>Pressure (hPa)</p>
                 </div>
             </div>
         </div>
     </div>
     <div class="fourthSection">
-        <h2>5 Days Forcast</h2>
+        <h2></h2>
     </div>
     <div class="fifthSection">
         <div class="otherDayOne">
