--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <div class="fourthSection">
+    <!-- <div class="fourthSection">
         <h2></h2>
     </div>
     <div class="fifthSection">
@@ -72,6 +72,6 @@
 
         </div>
 
-    </div>
+    </div> -->
 </body>
 </html>
