--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="headerhold">
         <div class="subhold">
-            <img src="./images/icons8-partly-cloudy-day-96.png" alt="">
+            <img src="./images/icons8-partly-cloudy-day-96.png" alt="logo">
             <h1>forecasty</h1>
         </div>
     </div>
