--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="headerhold">
         <div class="subhold">
             <img src="./images/icons8-partly-cloudy-day-96.png" alt="logo">
-            <h1>forecasty</h1>
+            <h1>forecasty weather</h1>
         </div>
     </div>
     <div class="secondSection">
